# ClayEngineVk

./: CMakeLists.txt  README.md  compile.sh  setup.sh
src/ClayEditorVk/: main.cpp
src/ClayEngineVk/: compile.sh
src/ClayEngineVk/Application/: Application.cpp  Application.h
src/ClayEngineVk/Core/: Core.h
src/ClayEngineVk/Device/: Device.cpp  Device.h  EngineDevice.cpp  EngineDevice.h
src/ClayEngineVk/Model/: Model cpp  Model.cpp  Model.h
src/ClayEngineVk/Pipeline/: Pipeline.cpp  Pipeline.h
src/ClayEngineVk/Shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/ClayEngineVk/SwapChain/: SwapChain.cpp  SwapChain.h
src/ClayEngineVk/Window/: Window.cpp  Window.h
